# CIDR24-SIMD-FPGA

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile_generated  README.md  build.sh  build_all.sh  build_impl.sh  build_intel.sh  build_setup.sh  build_submission.sh  lspci  makefile.j2  makefilegen.py  run_all.sh  run_intel.sh
eval/: aggregate.ipynb  auto_vec_filter.ipynb  conflict.ipynb  modulo.ipynb  submission.ipynb
eval/auto_vec_filter_helper/: auto_vec_filter_data.py
eval/submission_results/Agilex/: benchmark_results_aggregate.csv  benchmark_results_clz_aggregate.csv  benchmark_results_hadd_aggregate.csv  benchmark_results_modulo_aggregate.csv
eval/submission_results/Agilex/2907/: benchmark_results_aggregate.csv  benchmark_results_clz_aggregate.csv  benchmark_results_conflict_aggregate.csv  benchmark_results_hadd_aggregate.csv
eval/testing/aggregate/: aggregate_results.tsv
eval/testing/aggregate/old/: aggregate_autovec_results.tsv  aggregate_results.tsv
eval/testing/auto_vec_filter_results/: aggregate_results.tsv
eval/testing/auto_vec_filter_results/scalar_only/: aggregate_results.tsv
eval/testing/clz_results/: benchmark_results_clz_aggregate.tsv
eval/testing/clz_results/old/: benchmark_results_clz.tsv  benchmark_results_clz_aggregate.tsv  benchmark_results_clz_outDevice.tsv
eval/testing/conflict/: benchmark_results_conflict_aggregate.tsv
eval/testing/conflict/CD_TSL/: benchmark_conflict_detection_2023-07-21_16-13-19.tsv
eval/testing/conflict/old/: benchmark_results_conflict_aggregate.tsv  benchmark_results_conflict_outDevice.tsv  results.tsv
eval/testing/modulo_results/: benchmark_results_modulo.tsv
eval/testing/modulo_results/old/: benchmark_lzc_simd_2023-07-22_20-05-32.tsv  benchmark_results_modulo_aggregate.tsv  benchmark_results_modulo_outDevice.tsv
include/: data.h  exec.h  kernels.h  sycl.h  utils.h
src/: CMakeLists.txt  bitpacking_test.cpp  conflict_detection_test.cpp  executor_test.cpp  hadd_test.cpp  lzc_single_test.cpp  lzc_test.cpp  lzc_unrolled_and_aggregate_test.cpp  lzc_unrolled_test.cpp  modulo_test.cpp  modulo_test_and_aggregate.cpp  multiply_test.cpp  pack_bits_test.cpp  specific_conflict_detection_and_aggregate_test_u32_512.cpp  specific_conflict_detection_and_aggregate_test_u64_1024.cpp  specific_conflict_detection_and_aggregate_test_u64_512.cpp  specific_conflict_detection_test_u32_512.cpp  specific_conflict_detection_test_u64_1024.cpp  specific_conflict_detection_test_u64_512.cpp
src/intel_simd/conflict_detection/: build.sh  conflict_detection_simd.cpp  run.sh
src/intel_simd/filtered_agg/: agg_helper.hpp  aggregate_autovec_bench_oneApi.cpp  aggregate_bench_oneApi.cpp  autovec_agg.hpp  avx512_agg.hpp  avx_agg.hpp  build.sh  datagen.cpp  generic.cpp  generic_oneApi.cpp  run.sh  scalar_agg.hpp  simd.cpp  specific_oneAPI.cpp  sse_agg.hpp
src/intel_simd/include/: data.hpp  datagen.hpp  utils.hpp
src/intel_simd/lzc/: build.sh  lzc_simd.cpp  run.sh
src/intel_simd/modulo/: build.sh  modulo_simd.cpp
src/intel_simd/modulo/tsl/: CMakeLists.txt
src/intel_simd/modulo/tsl/include/: tslintrin.hpp
src/intel_simd/modulo/tsl/include/static/: tsl_static.hpp
src/intel_simd/modulo/tsl/include/static/simd/: simd_primitive_concepts.hpp  simd_type.hpp  simd_type_concepts.hpp
src/intel_simd/modulo/tsl/include/static/utils/: functional.hpp  preprocessor.hpp  type_concepts.hpp  type_helper.hpp
src/intel_simd/modulo/tsl/src/test/: CMakeLists.txt  binary_unit_test.cpp  calc_unit_test.cpp  catch_manager.cpp  compare_unit_test.cpp  convert_unit_test.cpp  ls_unit_test.cpp  mask_unit_test.cpp  test_functions.hpp
static_tsl/: CMakeLists.txt
static_tsl/include/: tslintrin.hpp
static_tsl/include/static/: tsl_static.hpp
static_tsl/include/static/simd/: simd_primitive_concepts.hpp  simd_type.hpp  simd_type_concepts.hpp
static_tsl/include/static/utils/: functional.hpp  preprocessor.hpp  type_concepts.hpp  type_helper.hpp
